[gd_scene load_steps=4 format=3 uid="uid://ce6w44oiep27y"]

[ext_resource type="Script" path="res://12_yazirusi_pon/yazirusi_pon.gd" id="1_w3xjo"]
[ext_resource type="Texture2D" uid="uid://ceh7dtah8h4rm" path="res://00_resource/gobot.svg" id="2_pa17b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p22gy"]
bg_color = Color(0, 0, 0, 1)

[node name="YazirusiPon" type="Node2D"]
script = ExtResource("1_w3xjo")

[node name="DebugGobot" type="Label" parent="."]
offset_left = 22.0
offset_top = 482.0
offset_right = 420.0
offset_bottom = 551.0
theme_override_font_sizes/font_size = 51
text = "Gobot is LEFT"

[node name="DebugInput" type="Label" parent="."]
offset_left = 20.0
offset_top = 551.0
offset_right = 418.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 51
text = "Input is LEFT"

[node name="GobotUp" type="TextureRect" parent="."]
offset_left = 504.0
offset_top = 108.0
offset_right = 632.0
offset_bottom = 236.0
texture = ExtResource("2_pa17b")

[node name="GobotLeft" type="TextureRect" parent="."]
offset_left = 375.0
offset_top = 235.0
offset_right = 503.0
offset_bottom = 363.0
texture = ExtResource("2_pa17b")

[node name="GobotDown" type="TextureRect" parent="."]
offset_left = 507.0
offset_top = 363.0
offset_right = 635.0
offset_bottom = 491.0
texture = ExtResource("2_pa17b")

[node name="GobotRight" type="TextureRect" parent="."]
offset_left = 635.0
offset_top = 232.0
offset_right = 763.0
offset_bottom = 360.0
texture = ExtResource("2_pa17b")

[node name="Title" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Title"]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="Title"]
offset_left = 210.0
offset_top = 192.0
offset_right = 984.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 100
text = "やじるしでポン!"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="Title"]
offset_left = 378.0
offset_top = 348.0
offset_right = 820.0
offset_bottom = 435.0
theme_override_font_sizes/font_size = 41
text = "あそびかた
←ひかったほうこうのやじるしキー
(またはWASD)をおす"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Title"]
offset_left = 545.0
offset_top = 519.0
offset_right = 697.0
offset_bottom = 569.0
text = "すたーと"

[node name="Gobot" type="TextureRect" parent="Title"]
offset_left = 239.0
offset_top = 353.0
offset_right = 367.0
offset_bottom = 481.0
scale = Vector2(0.355512, 0.355512)
texture = ExtResource("2_pa17b")

[node name="Gobot2" type="TextureRect" parent="Title"]
modulate = Color(1, 1, 1, 0.376471)
offset_left = 190.0
offset_top = 396.0
offset_right = 318.0
offset_bottom = 524.0
scale = Vector2(0.355512, 0.355512)
texture = ExtResource("2_pa17b")

[node name="Gobot3" type="TextureRect" parent="Title"]
modulate = Color(1, 1, 1, 0.376471)
offset_left = 286.0
offset_top = 395.0
offset_right = 414.0
offset_bottom = 523.0
scale = Vector2(0.355512, 0.355512)
texture = ExtResource("2_pa17b")

[node name="Gobot4" type="TextureRect" parent="Title"]
modulate = Color(1, 1, 1, 0.376471)
offset_left = 239.0
offset_top = 440.0
offset_right = 367.0
offset_bottom = 568.0
scale = Vector2(0.355512, 0.355512)
texture = ExtResource("2_pa17b")

[node name="Ending" type="Node2D" parent="."]
visible = false

[node name="OsimaiLabel" type="Label" parent="Ending"]
offset_left = 332.0
offset_top = 238.0
offset_right = 896.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 91
theme_override_styles/normal = SubResource("StyleBoxFlat_p22gy")
text = "おしまい"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Ending"]
offset_left = 545.0
offset_top = 519.0
offset_right = 697.0
offset_bottom = 569.0
text = "もういちど"

[node name="Score" type="Label" parent="."]
offset_left = 29.0
offset_top = 12.0
offset_right = 1126.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 51
text = "あと30びょう 0てん"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="pressed" from="Title/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Ending/RetryButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
